# sql-agent

./: README.md  pyproject.toml
app/: db.py
