[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "openai>=2.44.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlglot>=30.12.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
